--- a/Giaroli - Sprint 7.ipynb
+++ b/Giaroli - Sprint 7.ipynb
@@ -98,15 +98,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "els necessita al revés, és a dir, intercanviats les claus i els valors. Els valors i claus en el diccionari original són únics; si aquest no és el cas, la funció hauria d'imprimir un missatge d'advertiment."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -129,11 +122,11 @@
     "#usamos un bucle for para invertir los valores:\n",
     "diccionario_inverso = {}\n",
     "for key, value in diccionario_ejemplo.items():\n",
-    "    if value in diccionario_ejemplo:\n",
+    "    if value in diccionario_inverso:\n",
     "            print(f\"Advertencia: El valor '{value}' ya existe en el diccionario invertido.\")\n",
-    "    elif key in diccionario_ejemplo.values():\n",
+    "    if key in diccionario_inverso.values():\n",
     "        print(f\"Advertencia: La clave '{key}' ya existe en el diccionario invertido.\")\n",
-    "    else: diccionario_inverso[value] = key\n",
+    "    diccionario_inverso[value] = key\n",
     "\n",
     "print(diccionario_inverso)"
    ]
@@ -149,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +154,7 @@
     }
    ],
    "source": [
-    "#para desmostrarlo probamos añadir un valor repetido de una misma clave del diccionario:\n",
+    "#para desmostrarlo probamos añadir un valor asociado a una misma clave del diccionario:\n",
     "diccionario_clave_duplicada = {\"nombre\" : \"micaela\",\n",
     "                \"apellido\" : \"giaroli\",\n",
     "                \"edad\" : 32,\n",
@@ -169,12 +162,12 @@
     "\n",
     "print(diccionario_clave_duplicada)\n",
     "\n",
-    "#al imprimirlo vemos que el último valor duplicado es el que el diccionario tomará como válido para una misma clave"
+    "#al imprimirlo vemos que el último valor duplicado es el que el diccionario tomará como válido para una misma clave, pero no repetirá una clave existente"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +176,7 @@
      "text": [
       "{'nombre': 'micaela', 'apellido': 'giaroli', 'apodo': 'micaela'}\n",
       "Advertencia: El valor 'micaela' ya existe en el diccionario invertido.\n",
-      "{'micaela': 'nombre', 'giaroli': 'apellido'}\n"
+      "{'micaela': 'apodo', 'giaroli': 'apellido'}\n"
      ]
     }
    ],
@@ -200,10 +193,11 @@
     "for key, value in diccionario_valor_duplicado.items():\n",
     "    if value in diccionario_invertido:\n",
     "            print(f\"Advertencia: El valor '{value}' ya existe en el diccionario invertido.\")\n",
-    "    else:\n",
-    "        diccionario_invertido[value] = key\n",
+    "    diccionario_invertido[value] = key\n",
     "\n",
-    "print(diccionario_invertido)\n"
+    "print(diccionario_invertido)\n",
+    "\n",
+    "#existiendo un valor duplicado tomará por válido al último que ingresemos al diccionario\n"
    ]
   }
  ],
