--- a/Giaroli - Sprint 7.ipynb
+++ b/Giaroli - Sprint 7.ipynb
@@ -366,6 +366,55 @@
    "source": [
     "El client va quedar content amb el comptador de paraules, però ara vol llegir arxius TXT i que calculi la freqüència de cada paraula ordenades dins de les entrades habituals del diccionari segons la lletra amb la qual comencen, és a dir, les claus han d'anar de la A a la Z i dins de la A hem d'anar de la A la Z. Per exemple, per a l'arxiu \"tu_me_quieres_blanca.txt\" la sortida esperada seria:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': {'a': 3, 'agua:': 1, 'al': 2, 'alba': 4, 'alcobas': 1, 'alimenta': 1, 'alma': 1, 'amarga': 1, 'azucena': 1}, 'b': {'baco': 1, 'banquete': 1, 'bebe': 1, 'blanca': 3, 'boca': 1, 'bosques': 1, 'buen': 1}, 'c': {'cabañas': 1, 'carnes': 2, 'casta': 3, 'cerrada': 1, 'con': 4, 'conservas': 1, 'copas': 1, 'corola': 1, 'corriste': 1, 'cuando': 2, 'cubierto': 1, 'cuerpo': 1, 'cuáles': 1}, 'd': {'de': 8, 'dejaste': 1, 'del': 1, 'diga': 1, 'dios': 2, 'duerme': 1}, 'e': {'el': 4, 'ellas': 1, 'en': 4, 'engaño': 1, 'enredada': 1, 'entonces': 1, 'escarcha': 1, 'espumas': 1, 'esqueleto': 1, 'estrago': 1}, 'f': {'festejando': 1, 'filtrado': 1, 'frutos': 1}, 'h': {'habla': 1, 'hacia': 1, 'haya': 1, 'hayas': 1, 'hermana': 1, 'hombre': 1, 'hubiste': 1, 'huye': 1}, 'i': {'intacto': 1}, 'j': {'jardines': 1}, 'l': {'la': 3, 'labios': 1, 'las': 7, 'lo': 2, 'los': 4, 'luna': 1, 'lévate': 1, 'límpiate': 1}, 'm': {'mano': 1, 'manos': 1, 'margarita': 1, 'me': 10, 'mi': 1, 'mieles': 1, 'milagros': 1, 'mojada': 1, 'montaña': 1, 'morados': 1}, 'n': {'negros': 1, 'ni': 2, 'no': 1, 'nácar': 1, 'nívea': 2}, 'p': {'perdone': 2, 'perfume': 1, 'por': 2, 'pretendes': 3, 'preténdeme': 3, 'puesto': 1, 'pájaros': 1, 'pámpanos': 1}, 'q': {'que': 6, 'quedó': 1, 'quieres': 6}, 'r': {'rayo': 1, 'raíz': 1, 'renueva': 1, 'rocas': 1, 'rojo': 1}, 's': {'salitre': 1, 'se': 2, 'sea': 1, 'sean': 1, 'sobre': 2, 'sé': 1}, 't': {'te': 3, 'tejidos': 1, 'tenue': 1, 'tierra': 1, 'toca': 1, 'todas': 2, 'todavía': 1, 'tornadas': 1, 'tú': 8}, 'u': {'un': 1, 'una': 1}, 'v': {'vestido': 1, 'vete': 1, 'vive': 1}, 'y': {'y': 5}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# importamos módulo re para poder usar múltiples delimitadores\n",
+    "import re\n",
+    "\n",
+    "# utilizamos la función input para obtener el texto a contabilizar y lower para que no sea casesensitive\n",
+    "texto = input(\"Copia aquí el texto que quieras contabilizar: \").lower()\n",
+    "\n",
+    "# dividimos el texto en palabras según los múltiples delimitadores que puede tener\n",
+    "delimitadores = r\"[ ,;¡!.?()]+\"\n",
+    "palabras = re.split(delimitadores, texto)\n",
+    "\n",
+    "# creamos un diccionario principal para almacenar las palabras contadas organizadas por letra inicial\n",
+    "resultado = {}\n",
+    "\n",
+    "# contabilizamos cada palabra y organizamos por letra inicial\n",
+    "for palabra in palabras:\n",
+    "    if palabra != '':  # Verificamos si la palabra no está vacía\n",
+    "        primera_letra = palabra[0]\n",
+    "        #si la primera letra de la palabra no está en el resultado creamos un nuevo subdiccionario\n",
+    "        if primera_letra not in resultado: \n",
+    "            resultado[primera_letra] = {}\n",
+    "        # agregamos la palabra al subdiccionario correspondiente y actualizamos el contador\n",
+    "        resultado[primera_letra][palabra] = resultado[primera_letra].get(palabra, 0) + 1\n",
+    "\n",
+    "\n",
+    "# Ordenamos alfabéticamente las claves del diccionario principal\n",
+    "resultado_ordenado = dict(sorted(resultado.items()))\n",
+    "\n",
+    "# Iteramos para orfdernar alfabéticamente las claves de cada subdiccionario y lo convertimos de nuevo en diccionario\n",
+    "for letra, subdiccionario in resultado_ordenado.items():\n",
+    "    resultado_ordenado[letra] = dict(sorted(subdiccionario.items()))\n",
+    "\n",
+    "# Imprimimos el resultado final\n",
+    "print(resultado_ordenado)\n"
+   ]
   }
  ],
  "metadata": {
