--- a/Giaroli - Sprint 7.ipynb
+++ b/Giaroli - Sprint 7.ipynb
@@ -12,20 +12,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Escriu una funció que calculi l'IMC ingressat per l'usuari/ària, és a dir, qui ho executi haurà d'ingressar aquestes dades. Pots obtenir més informació del seu càlcul en:\n",
+    "Escriu una funció que calculi l'IMC ingressat per l'usuari/ària, és a dir, qui ho executi haurà d'ingressar aquestes dades. \n",
     "La funció ha de classificar el resultat en les seves respectives categories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tu IMC es igual a 34.6, tienes obesidad.\n"
+      "Tu IMC es igual a 39.06, tienes obesidad.\n"
      ]
     }
    ],
@@ -42,9 +42,9 @@
     "        imc = round((peso/(altura*altura)),2)\n",
     "        if imc < 18.5: \n",
     "            mensaje = \"tienes bajo peso.\"\n",
-    "        elif 18.5 <= imc < 25:\n",
+    "        elif imc < 25:\n",
     "            mensaje = \"tienes peso normal.\"\n",
-    "        elif 25 <= imc < 30:\n",
+    "        elif imc < 30:\n",
     "            mensaje = \"tienes sobrepeso.\"\n",
     "        else: \n",
     "            mensaje = \"tienes obesidad.\"\n",
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40.0ºC es igual a 104.0ºF y a 563.67ºR.\n"
+      "30.0ºC es igual a 86.0ºF y a 545.67ºR.\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,10 +214,11 @@
     "            diccionario_invertido[value] = key\n",
     "    print(diccionario_invertido)\n",
     "\n",
-    "# Probamos el código \n",
+    "# Probamos el código: Prueba1\n",
     "diccionario_original = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
     "inversor_diccionario(diccionario_original)\n",
     "\n",
+    "# Prueba2\n",
     "diccionario_original = {\"x\": \"apple\", \"y\": \"banana\", \"z\": \"banana\"}\n",
     "inversor_diccionario(diccionario_original)"
    ]
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,10 +275,11 @@
     "            diccionario_invertido[value] = key\n",
     "    print(diccionario_invertido)\n",
     "\n",
-    "# Probamos el código \n",
+    "# Probamos el código: Prueba1 \n",
     "diccionario_original = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
     "inversor_diccionario(diccionario_original)\n",
     "\n",
+    "# Prueba2\n",
     "diccionario_original = {\"x\": \"apple\", \"y\": \"banana\", \"z\": \"banana\"}\n",
     "inversor_diccionario(diccionario_original)"
    ]
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +308,6 @@
      "output_type": "stream",
      "text": [
       "Lista de números convertidos a decimales: [1.3, 10000000000.0, 2.0, 1.0, 1.4, 1.0, 2.0, 3.0, 3.4]\n",
-      "\n",
       "Lista de elementos no convertibles a decimales: ['one', 'seven', '3-1/2', 'not-a-number']\n"
      ]
     }
@@ -333,13 +334,14 @@
     "                lista_decimales.append(float(elemento)) \n",
     "            except: \n",
     "                lista_sin_convertir.append(elemento)\n",
-    "    return lista_decimales, lista_sin_convertir        \n",
+    "    print(f\"Lista de números convertidos a decimales: {lista_decimales}\")\n",
+    "    print(f\"Lista de elementos no convertibles a decimales: {lista_sin_convertir}\") \n",
+    "         \n",
     "\n",
     "# Comprobamos el código\n",
     "lista_recibida= [ '1.3', 'one' , '1e10' , 'seven', '3-1/2', ('2',1,1.4,'not-a-number'), [1,2,'3','3.4']]\n",
     "\n",
-    "print(\"Lista de números convertidos a decimales:\", lista_decimales)\n",
-    "print(\"\\nLista de elementos no convertibles a decimales:\",lista_sin_convertir)"
+    "conversor_datos(lista_recibida)"
    ]
   },
   {
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
